# mqtt_faceAI

./: CMakeLists.txt  faceDetect.cpp  faceDetect.h  getUrlPic.h  json.cpp  json.h  logs.cpp  logs.h  main.cpp  main.h
include/mqttai/: api.h
mqtt_faceAI_pack/: mqtt_faceAI
mqtt_faceAI_pack/include/OpenCV_INC/opencv2/: cvconfig.h
mqtt_faceAI_pack/lib/curl/: libcurl.la
mqtt_faceAI_pack/lib/opencv_lib/: libopencv_aruco.so.3.4.12  libopencv_bgsegm.so.3.4.12  libopencv_bioinspired.so.3.4.12  libopencv_calib3d.so.3.4.12  libopencv_ccalib.so.3.4.12  libopencv_datasets.so.3.4.12  libopencv_dnn_objdetect.so.3.4.12  libopencv_dpm.so.3.4.12  libopencv_face.so.3.4.12  libopencv_features2d.so.3.4.12  libopencv_flann.so.3.4.12  libopencv_freetype.so.3.4.12  libopencv_fuzzy.so.3.4.12  libopencv_hfs.so.3.4.12  libopencv_highgui.so.3.4.12  libopencv_img_hash.so.3.4.12  libopencv_imgcodecs.so.3.4.12  libopencv_line_descriptor.so.3.4.12  libopencv_ml.so.3.4.12  libopencv_objdetect.so.3.4.12  libopencv_optflow.so.3.4.12  libopencv_phase_unwrapping.so.3.4.12  libopencv_photo.so.3.4.12  libopencv_plot.so.3.4.12  libopencv_reg.so.3.4.12  libopencv_rgbd.so.3.4.12  libopencv_saliency.so.3.4.12  libopencv_shape.so.3.4.12  libopencv_stereo.so.3.4.12  libopencv_stitching.so.3.4.12  libopencv_structured_light.so.3.4.12  libopencv_superres.so.3.4.12  libopencv_surface_matching.so.3.4.12  libopencv_text.so.3.4.12  libopencv_tracking.so.3.4.12  libopencv_video.so.3.4.12  libopencv_videoio.so.3.4.12  libopencv_videostab.so.3.4.12  libopencv_xfeatures2d.so.3.4.12  libopencv_ximgproc.so.3.4.12  (+2 more)
(+3 files in other folders)
